--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
             let geselecteerdeTimer = 0;
             let zichtbareTimers = [true, true, true, true];
 
+            // Synchroniseer de geselecteerde timer met Firebase
+            function syncSelectedTimer() {
+                set(selectedTimerRef, geselecteerdeTimer);
+            }
+
+            // Synchroniseer de timers met Firebase
+            function syncTimers() {
+                set(timersRef, timers);
+            }
+
             function updateWeergave() {
                 timers.forEach((tijd, index) => {
                     const timerElement = document.getElementById(`timer${index}`);
@@ -44,7 +54,7 @@
                 geselecteerdeTimer = index;
                 document.getElementById(`timer-container-${index}`).classList.add("selected");
                 document.getElementById("timerSelect").value = index;
-                syncSelectedTimer(); // Synchroniseer geselecteerde timer met Firebase
+                syncSelectedTimer();
             }
 
             function startTimer() {
@@ -53,33 +63,36 @@
                     if (timers[geselecteerdeTimer] > 0) {
                         timers[geselecteerdeTimer]--;
                         updateWeergave();
-                        syncTimers(); // Synchroniseer elke seconde
+                        syncTimers();
+                    } else {
+                        stopTimer();
                     }
                 }, 1000);
+                syncSelectedTimer();
             }
 
             function stopTimer() {
                 clearInterval(intervals[geselecteerdeTimer]);
                 intervals[geselecteerdeTimer] = null;
-                syncTimers(); // Synchroniseer gestopte timer met Firebase
+                syncTimers();
             }
 
             function resetTimer() {
                 timers = [60, 60, 60, 60];
                 updateWeergave();
-                syncTimers(); // Synchroniseer reset timer met Firebase
+                syncTimers();
             }
 
             function pasTijdAan(aantal) {
                 timers[geselecteerdeTimer] = Math.max(0, timers[geselecteerdeTimer] + aantal);
                 updateWeergave();
-                syncTimers(); // Synchroniseer tijdsverandering met Firebase
+                syncTimers();
             }
 
             function toggleTimerZichtbaarheid() {
                 zichtbareTimers[geselecteerdeTimer] = !zichtbareTimers[geselecteerdeTimer];
                 updateWeergave();
-                syncTimers(); // Synchroniseer zichtbaarheid met Firebase
+                syncTimers();
             }
 
             function stelAangepasteTijdIn() {
@@ -87,7 +100,7 @@
                 if (!isNaN(invoerSeconden) && invoerSeconden >= 0) {
                     timers[geselecteerdeTimer] = invoerSeconden;
                     updateWeergave();
-                    syncTimers(); // Synchroniseer handmatige tijdsverandering met Firebase
+                    syncTimers();
                 } else {
                     alert("Voer een geldig aantal seconden in (minimaal 0)");
                 }
@@ -95,13 +108,15 @@
 
             function maakTeamnaamBewerkbaar(index) {
                 let naamLabel = document.getElementById(`team-name-${index}`);
+
                 if (naamLabel && naamLabel.tagName.toLowerCase() !== "input") {
                     let inputVeld = document.createElement("input");
                     inputVeld.type = "text";
                     inputVeld.value = teamNamen[index];
                     inputVeld.classList.add("team-input");
-                    inputVeld.style.fontSize = "30px"; // Zorg ervoor dat de input hetzelfde blijft qua layout
-                    inputVeld.style.width = "80%"; // Zorg ervoor dat het niet te breed is
+                    inputVeld.style.fontSize = "30px";
+                    inputVeld.style.width = "80%";
+
                     naamLabel.replaceWith(inputVeld);
                     inputVeld.focus();
 
@@ -119,9 +134,10 @@
                     teamNamen[index] = nieuweNaam;
                 }
                 updateWeergave();
+                syncTimers();
             }
 
-            // Event listeners voor timer en knoppen
+            // Event listeners
             document.querySelectorAll(".timer").forEach((el, index) => {
                 el.addEventListener("click", () => selecteerTimer(index));
             });
@@ -137,11 +153,7 @@
             document.getElementById("setTimeBtn").addEventListener("click", stelAangepasteTijdIn);
 
             document.querySelectorAll(".adjust-time").forEach(button => {
-                button.addEventListener("click", () => {
-                    const tijdVerandering = parseInt(button.dataset.amount);
-                    pasTijdAan(tijdVerandering);
-                    syncTimers(); // Synchroniseer tijdsverandering met Firebase
-                });
+                button.addEventListener("click", () => pasTijdAan(parseInt(button.dataset.amount)));
             });
 
             selecteerTimer(0);
@@ -149,98 +161,7 @@
         });
     </script>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f5f5f5;
-        }
-        h1 {
-            font-size: 80px;
-        }
-        .timer-container {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-bottom: 20px;
-            flex-wrap: nowrap; /* Zorg ervoor dat de timers naast elkaar blijven */
-            overflow-x: auto; /* Zorg ervoor dat je kunt scrollen als er niet genoeg ruimte is */
-        }
-        .timer {
-            width: 300px;  /* Vergrote breedte voor timers */
-            height: 300px;  /* Vergrote hoogte voor timers */
-            border: 6px solid white;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            font-size: 70px; /* Vergrote tekstgrootte voor timers */
-            font-weight: bold;
-            color: red;
-            background-color: white;
-            border-radius: 20px;
-        }
-        .team-name {
-            font-size: 30px;  /* Verander de font size van de teamnaam naar 30px */
-            font-weight: bold;
-            color: black;
-            cursor: pointer;
-            margin-bottom: 20px;
-        }
-        .team-input {
-            font-size: 30px;  /* Teamnaam blijft op dezelfde grootte van 30px */
-            font-weight: bold;
-            width: 80%;
-            text-align: center;
-            border: none;
-            outline: none;
-        }
-        .controls {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 10px;
-            margin-top: 60px;
-        }
-        .row {
-            display: flex;
-            justify-content: center;
-            gap: 10px;
-            flex-wrap: wrap;
-        }
-        button {
-            background-color: red;
-            color: white;
-            border: none;
-            padding: 10px;
-            font-size: 14px;
-            border-radius: 5px;
-            width: auto; /* Laat de knoppen kleiner worden, maar passen goed in de layout */
-            max-width: 120px; /* Beperk de breedte van de knoppen */
-        }
-        .selected {
-            border: 6px solid red;
-        }
-
-        /* Media query voor kleinere schermen (mobiel) */
-        @media (max-width: 768px) {
-            .timer-container {
-                flex-direction: row; /* Zorg ervoor dat de timers naast elkaar blijven op kleinere schermen */
-            }
-            .timer {
-                width: 230px;  /* Kleinere breedte voor mobiele weergave */
-                height: 230px;  /* Kleinere hoogte voor mobiele weergave */
-                font-size: 50px; /* Kleinere tekstgrootte voor mobiele weergave */
-            }
-            .team-name {
-                font-size: 18px; /* Kleinere teamnaam voor mobiele weergave */
-            }
-            .controls {
-                width: 90%;  /* Maak de knoppen smaller voor mobiele weergave */
-            }
-            button {
-                font-size: 12px; /* Kleinere tekst voor knoppen op mobiel */
-            }
-        }
+        /* De rest van je CSS blijft hetzelfde */
     </style>
 </head>
 <body>
