--- a/index.html
+++ b/index.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>De Slimste Kameraad</title>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
     <script defer>
+        // Firebase-configuratie
+        const firebaseConfig = {
+            apiKey: "AIzaSyD6uImMSAWrXWedzXIiOPmgQaCykM0WWOo",
+            authDomain: "timer-voor-powerpoint.firebaseapp.com",
+            databaseURL: "https://timer-voor-powerpoint-default-rtdb.europe-west1.firebasedatabase.app",
+            projectId: "timer-voor-powerpoint",
+            storageBucket: "timer-voor-powerpoint.firebasestorage.app",
+            messagingSenderId: "478610962081",
+            appId: "1:478610962081:web:f5849499db39724c6aa2e0",
+            measurementId: "G-G734Q3W18F"
+        };
+
+        // Initialiseer Firebase
+        const app = firebase.initializeApp(firebaseConfig);
+        const database = firebase.database();
+
         document.addEventListener("DOMContentLoaded", () => {
             let timers = [60, 60, 60, 60];
             let teamNamen = ["Team 1", "Team 2", "Team 3", "Team 4"];
@@ -21,19 +39,17 @@
 
                     const teamNaamEl = document.getElementById(`team-name-${index}`);
 
-                    // Controleer of het teamnaam element bestaat voordat je verder gaat
                     if (teamNaamEl) {
-                        // Als de teamnaam een input veld is, vervang het met een div
                         if (teamNaamEl.tagName.toLowerCase() === "input") {
                             let nieuwNaamDiv = document.createElement("div");
                             nieuwNaamDiv.id = `team-name-${index}`;
                             nieuwNaamDiv.classList.add("team-name");
                             nieuwNaamDiv.textContent = teamNamen[index];
-                            nieuwNaamDiv.addEventListener("click", () => maakTeamnaamBewerkbaar(index)); // Voeg de event listener opnieuw toe
+                            nieuwNaamDiv.addEventListener("click", () => maakTeamnaamBewerkbaar(index));
                             teamNaamEl.replaceWith(nieuwNaamDiv);
                         } else {
                             teamNaamEl.textContent = teamNamen[index];
-                            teamNaamEl.addEventListener("click", () => maakTeamnaamBewerkbaar(index)); // Voeg de event listener toe als deze nog niet bestaat
+                            teamNaamEl.addEventListener("click", () => maakTeamnaamBewerkbaar(index));
                         }
                     }
 
@@ -54,6 +70,7 @@
                     if (timers[geselecteerdeTimer] > 0) {
                         timers[geselecteerdeTimer]--;
                         updateWeergave();
+                        updateDatabase(); // Stuur elke wijziging naar Firebase
                     }
                 }, 1000);
             }
@@ -66,11 +83,13 @@
             function resetTimer() {
                 timers = [60, 60, 60, 60];
                 updateWeergave();
+                updateDatabase(); // Zet de timers weer op 60 in Firebase
             }
 
             function pasTijdAan(aantal) {
                 timers[geselecteerdeTimer] = Math.max(0, timers[geselecteerdeTimer] + aantal);
                 updateWeergave();
+                updateDatabase(); // Stuur de wijziging naar Firebase
             }
 
             function toggleTimerZichtbaarheid() {
@@ -83,6 +102,7 @@
                 if (!isNaN(invoerSeconden) && invoerSeconden >= 0) {
                     timers[geselecteerdeTimer] = invoerSeconden;
                     updateWeergave();
+                    updateDatabase(); // Stuur de nieuwe timerwaarde naar Firebase
                 } else {
                     alert("Voer een geldig aantal seconden in (minimaal 0)");
                 }
@@ -91,25 +111,17 @@
             function maakTeamnaamBewerkbaar(index) {
                 let naamLabel = document.getElementById(`team-name-${index}`);
                 
-                // Alleen doorgaan als het element nog niet vervangen is
                 if (naamLabel && naamLabel.tagName.toLowerCase() !== "input") {
                     let inputVeld = document.createElement("input");
                     inputVeld.type = "text";
                     inputVeld.value = teamNamen[index];
                     inputVeld.classList.add("team-input");
-
-                    // Zorg ervoor dat de input hetzelfde blijft qua layout
-                    inputVeld.style.fontSize = "30px"; // Wijzig de font size naar 30px
-                    inputVeld.style.width = "80%"; // Zorg ervoor dat het niet te breed is
-
-                    // Vervang de huidige naam door het invoerveld
+                    inputVeld.style.fontSize = "30px";
+                    inputVeld.style.width = "80%";
                     naamLabel.replaceWith(inputVeld);
                     inputVeld.focus();
 
-                    // Wanneer het invoerveld verliest focus, sla de nieuwe naam op
                     inputVeld.addEventListener("blur", () => slaNieuweTeamnaamOp(index, inputVeld.value));
-                    
-                    // Wanneer je op enter drukt, sla de nieuwe naam op
                     inputVeld.addEventListener("keydown", (event) => {
                         if (event.key === "Enter") {
                             slaNieuweTeamnaamOp(index, inputVeld.value);
@@ -123,6 +135,26 @@
                     teamNamen[index] = nieuweNaam;
                 }
                 updateWeergave();
+                updateDatabase(); // Stuur de nieuwe teamnaam naar Firebase
+            }
+
+            function updateDatabase() {
+                const timersRef = firebase.database().ref('timers');
+                timersRef.set({
+                    team1: timers[0],
+                    team2: timers[1],
+                    team3: timers[2],
+                    team4: timers[3]
+                });
+            }
+
+            function syncTimers() {
+                const timersRef = firebase.database().ref('timers');
+                timersRef.on('value', (snapshot) => {
+                    const data = snapshot.val();
+                    timers = [data.team1, data.team2, data.team3, data.team4];
+                    updateWeergave();
+                });
             }
 
             // Event listeners voor timer en knoppen
@@ -146,6 +178,7 @@
 
             selecteerTimer(0);
             updateWeergave();
+            syncTimers(); // Start het synchroniseren van de timers
         });
     </script>
     <style>
@@ -162,32 +195,32 @@
             justify-content: center;
             gap: 20px;
             margin-bottom: 20px;
-            flex-wrap: nowrap; /* Zorg ervoor dat de timers naast elkaar blijven */
-            overflow-x: auto; /* Zorg ervoor dat je kunt scrollen als er niet genoeg ruimte is */
+            flex-wrap: nowrap;
+            overflow-x: auto;
         }
         .timer {
-            width: 300px;  /* Vergrote breedte voor timers */
-            height: 300px;  /* Vergrote hoogte voor timers */
+            width: 300px;
+            height: 300px;
             border: 6px solid white;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            font-size: 70px; /* Vergrote tekstgrootte voor timers */
+            font-size: 70px;
             font-weight: bold;
             color: red;
             background-color: white;
             border-radius: 20px;
         }
         .team-name {
-            font-size: 30px;  /* Verander de font size van de teamnaam naar 30px */
+            font-size: 30px;
             font-weight: bold;
             color: black;
             cursor: pointer;
             margin-bottom: 20px;
         }
         .team-input {
-            font-size: 30px;  /* Teamnaam blijft op dezelfde grootte van 30px */
+            font-size: 30px;
             font-weight: bold;
             width: 80%;
             text-align: center;
@@ -214,31 +247,30 @@
             padding: 10px;
             font-size: 14px;
             border-radius: 5px;
-            width: auto; /* Laat de knoppen kleiner worden, maar passen goed in de layout */
-            max-width: 120px; /* Beperk de breedte van de knoppen */
+            width: auto;
+            max-width: 120px;
         }
         .selected {
             border: 6px solid red;
         }
 
-        /* Media query voor kleinere schermen (mobiel) */
         @media (max-width: 768px) {
             .timer-container {
-                flex-direction: row; /* Zorg ervoor dat de timers naast elkaar blijven op kleinere schermen */
+                flex-direction: row;
             }
             .timer {
-                width: 230px;  /* Kleinere breedte voor mobiele weergave */
-                height: 230px;  /* Kleinere hoogte voor mobiele weergave */
-                font-size: 50px; /* Kleinere tekstgrootte voor mobiele weergave */
+                width: 230px;
+                height: 230px;
+                font-size: 50px;
             }
             .team-name {
-                font-size: 18px; /* Kleinere teamnaam voor mobiele weergave */
+                font-size: 18px;
             }
             .controls {
-                width: 90%;  /* Maak de knoppen smaller voor mobiele weergave */
+                width: 90%;
             }
             button {
-                font-size: 12px; /* Kleinere tekst voor knoppen op mobiel */
+                font-size: 12px;
             }
         }
     </style>
@@ -264,7 +296,6 @@
         </div>
     </div>
 
-    <!-- Control Buttons -->
     <div class="controls">
         <div class="row">
             <button id="startBtn">Start</button>
@@ -289,5 +320,8 @@
             <button id="setTimeBtn">Doorvoeren</button>
         </div>
     </div>
+</body>
+</html>
+
 </body>
 </html>
