--- a/index.html
+++ b/index.html
@@ -4,25 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>De Slimste Kameraad</title>
-    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
+    <!-- Oude versie van Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script defer>
-        // Firebase-configuratie
-        const firebaseConfig = {
-            apiKey: "",  // Geen API Key, omdat deze niet noodzakelijk is voor de Realtime Database
-            authDomain: "slimste-kameraad-timer.firebaseapp.com",  // Vervang met je project ID
-            databaseURL: "https://slimste-kameraad-timer-default-rtdb.europe-west1.firebasedatabase.app",  // Firebase database URL
-            projectId: "slimste-kameraad-timer",  // Je project ID
-            storageBucket: "slimste-kameraad-timer.appspot.com",  // Firebase Storage
-            messagingSenderId: "37865286019",  // Messaging Sender ID
-            appId: ""  // Laat leeg, aangezien we geen Web App gebruiken
-        };
-
-        // Initialiseer Firebase
-        const app = firebase.initializeApp(firebaseConfig);
-        const database = firebase.database();
-
         document.addEventListener("DOMContentLoaded", () => {
+            // Firebase-configuratie
+            const firebaseConfig = {
+                apiKey: "", // Geen API Key nodig zonder Web App
+                authDomain: "slimste-kameraad-timer.firebaseapp.com",
+                databaseURL: "https://slimste-kameraad-timer-default-rtdb.europe-west1.firebasedatabase.app",
+                projectId: "slimste-kameraad-timer",
+                storageBucket: "slimste-kameraad-timer.appspot.com",
+                messagingSenderId: "37865286019",
+                appId: "" // Geen Web App ID nodig
+            };
+
+            // Firebase initialisatie
+            const app = firebase.initializeApp(firebaseConfig);
+            const database = firebase.database();
+
             let timers = [60, 60, 60, 60];
             let teamNamen = ["Team 1", "Team 2", "Team 3", "Team 4"];
             let intervals = [null, null, null, null];
@@ -37,6 +38,7 @@
                     }
 
                     const teamNaamEl = document.getElementById(`team-name-${index}`);
+
                     if (teamNaamEl) {
                         if (teamNaamEl.tagName.toLowerCase() === "input") {
                             let nieuwNaamDiv = document.createElement("div");
@@ -108,24 +110,18 @@
 
             function maakTeamnaamBewerkbaar(index) {
                 let naamLabel = document.getElementById(`team-name-${index}`);
+                
                 if (naamLabel && naamLabel.tagName.toLowerCase() !== "input") {
                     let inputVeld = document.createElement("input");
                     inputVeld.type = "text";
                     inputVeld.value = teamNamen[index];
                     inputVeld.classList.add("team-input");
-
-                    // Zorg ervoor dat de input hetzelfde blijft qua layout
-                    inputVeld.style.fontSize = "30px"; // Wijzig de font size naar 30px
-                    inputVeld.style.width = "80%"; // Zorg ervoor dat het niet te breed is
-
-                    // Vervang de huidige naam door het invoerveld
+                    inputVeld.style.fontSize = "30px";
+                    inputVeld.style.width = "80%";
                     naamLabel.replaceWith(inputVeld);
                     inputVeld.focus();
 
-                    // Wanneer het invoerveld verliest focus, sla de nieuwe naam op
                     inputVeld.addEventListener("blur", () => slaNieuweTeamnaamOp(index, inputVeld.value));
-                    
-                    // Wanneer je op enter drukt, sla de nieuwe naam op
                     inputVeld.addEventListener("keydown", (event) => {
                         if (event.key === "Enter") {
                             slaNieuweTeamnaamOp(index, inputVeld.value);
@@ -139,6 +135,7 @@
                     teamNamen[index] = nieuweNaam;
                 }
                 updateWeergave();
+                updateDatabase(); // Stuur de nieuwe teamnaam naar Firebase
             }
 
             function updateDatabase() {
@@ -198,32 +195,32 @@
             justify-content: center;
             gap: 20px;
             margin-bottom: 20px;
-            flex-wrap: nowrap;
-            overflow-x: auto;
+            flex-wrap: nowrap; /* Zorg ervoor dat de timers naast elkaar blijven */
+            overflow-x: auto; /* Zorg ervoor dat je kunt scrollen als er niet genoeg ruimte is */
         }
         .timer {
-            width: 300px;
-            height: 300px;
+            width: 300px;  /* Vergrote breedte voor timers */
+            height: 300px;  /* Vergrote hoogte voor timers */
             border: 6px solid white;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            font-size: 70px;
+            font-size: 70px; /* Vergrote tekstgrootte voor timers */
             font-weight: bold;
             color: red;
             background-color: white;
             border-radius: 20px;
         }
         .team-name {
-            font-size: 30px;
+            font-size: 30px;  /* Verander de font size van de teamnaam naar 30px */
             font-weight: bold;
             color: black;
             cursor: pointer;
             margin-bottom: 20px;
         }
         .team-input {
-            font-size: 30px;
+            font-size: 30px;  /* Teamnaam blijft op dezelfde grootte van 30px */
             font-weight: bold;
             width: 80%;
             text-align: center;
@@ -250,30 +247,31 @@
             padding: 10px;
             font-size: 14px;
             border-radius: 5px;
-            width: auto;
-            max-width: 120px;
+            width: auto; /* Laat de knoppen kleiner worden, maar passen goed in de layout */
+            max-width: 120px; /* Beperk de breedte van de knoppen */
         }
         .selected {
             border: 6px solid red;
         }
 
+        /* Media query voor kleinere schermen (mobiel) */
         @media (max-width: 768px) {
             .timer-container {
-                flex-direction: row;
+                flex-direction: row; /* Zorg ervoor dat de timers naast elkaar blijven op kleinere schermen */
             }
             .timer {
-                width: 230px;
-                height: 230px;
-                font-size: 50px;
+                width: 230px;  /* Kleinere breedte voor mobiele weergave */
+                height: 230px;  /* Kleinere hoogte voor mobiele weergave */
+                font-size: 50px; /* Kleinere tekstgrootte voor mobiele weergave */
             }
             .team-name {
-                font-size: 18px;
+                font-size: 18px; /* Kleinere teamnaam voor mobiele weergave */
             }
             .controls {
-                width: 90%;
+                width: 90%;  /* Maak de knoppen smaller voor mobiele weergave */
             }
             button {
-                font-size: 12px;
+                font-size: 12px; /* Kleinere tekst voor knoppen op mobiel */
             }
         }
     </style>
@@ -299,6 +297,7 @@
         </div>
     </div>
 
+    <!-- Control Buttons -->
     <div class="controls">
         <div class="row">
             <button id="startBtn">Start</button>
