--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         document.addEventListener("DOMContentLoaded", () => {
             // Firebase-configuratie
             const firebaseConfig = {
-                apiKey: "", // Geen API Key nodig zonder Web App
+                apiKey: "",
                 authDomain: "slimste-kameraad-timer.firebaseapp.com",
                 databaseURL: "https://slimste-kameraad-timer-default-rtdb.europe-west1.firebasedatabase.app",
                 projectId: "slimste-kameraad-timer",
@@ -20,7 +20,6 @@
                 appId: "" // Geen Web App ID nodig
             };
 
-            // Firebase initialisatie
             const app = firebase.initializeApp(firebaseConfig);
             const database = firebase.database();
 
@@ -42,6 +41,9 @@
                     elementsToHide.forEach(el => {
                         el.style.display = 'none';
                     });
+
+                    // Stel timer selectie in voor de "display" pagina
+                    selecteerTimer(0);  // Zet timer 1 als geselecteerde timer
                 } else {
                     // Als de 'view' parameter niet 'display' is, laat de elementen zien
                     const elementsToShow = document.querySelectorAll('.hide-if-needed');
@@ -213,17 +215,12 @@
                 selecteerTimer(parseInt(event.target.value));
             });
 
-            document.getElementById("startBtn").addEventListener("click", startTimer);
-            document.getElementById("stopBtn").addEventListener("click", stopTimer);
-            document.getElementById("resetBtn").addEventListener("click", resetTimer);
-            document.getElementById("toggleBtn").addEventListener("click", toggleTimerZichtbaarheid);
-            document.getElementById("setTimeBtn").addEventListener("click", stelAangepasteTijdIn);
+            // Roep de selecteerTimer() functie aan met de juiste index bij pagina's zonder 'display' view
+            if (window.location.search === "" || !window.location.search.includes('view=display')) {
+                selecteerTimer(0); // Stel de timer selectie in bij niet-display pagina's
+            }
 
-            document.querySelectorAll(".adjust-time").forEach(button => {
-                button.addEventListener("click", () => pasTijdAan(parseInt(button.dataset.amount)));
-            });
-
-            selecteerTimer(0);
+            // Zorg ervoor dat de initialisatie van timers goed werkt
             updateWeergave();
             syncTimers(); // Start het synchroniseren van de timers
         });
@@ -242,32 +239,32 @@
             justify-content: center;
             gap: 20px;
             margin-bottom: 20px;
-            flex-wrap: nowrap; /* Zorg ervoor dat de timers naast elkaar blijven */
-            overflow-x: auto; /* Zorg ervoor dat je kunt scrollen als er niet genoeg ruimte is */
+            flex-wrap: nowrap;
+            overflow-x: auto;
         }
         .timer {
-            width: 300px;  /* Vergrote breedte voor timers */
-            height: 300px;  /* Vergrote hoogte voor timers */
+            width: 300px;
+            height: 300px;
             border: 6px solid white;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            font-size: 70px; /* Vergrote tekstgrootte voor timers */
+            font-size: 70px;
             font-weight: bold;
             color: red;
             background-color: white;
             border-radius: 20px;
         }
         .team-name {
-            font-size: 30px;  /* Verander de font size van de teamnaam naar 30px */
+            font-size: 30px;
             font-weight: bold;
             color: black;
             cursor: pointer;
             margin-bottom: 20px;
         }
         .team-input {
-            font-size: 30px;  /* Teamnaam blijft op dezelfde grootte van 30px */
+            font-size: 30px;
             font-weight: bold;
             width: 80%;
             text-align: center;
@@ -294,8 +291,8 @@
             padding: 10px;
             font-size: 14px;
             border-radius: 5px;
-            width: auto; /* Laat de knoppen kleiner worden, maar passen goed in de layout */
-            max-width: 120px; /* Beperk de breedte van de knoppen */
+            width: auto;
+            max-width: 120px;
         }
         .selected {
             border: 6px solid red;
@@ -304,7 +301,7 @@
         /* Media query voor kleinere schermen (mobiel) */
         @media (max-width: 768px) {
             .timer-container {
-                flex-direction: row; /* Zorg ervoor dat de timers naast elkaar blijven op kleinere schermen */
+                flex-direction: row;
             }
             .timer {
                 width: 230px;
