--- a/index.html
+++ b/index.html
@@ -42,12 +42,6 @@
                     elementsToHide.forEach(el => {
                         el.style.display = 'none';
                     });
-                    const storedTimer = localStorage.getItem('selectedTimer');
-                    if (storedTimer !== null) {
-                        selecteerTimer(parseInt(storedTimer));
-                    } else {
-                        selecteerTimer(0);
-                    }
                 } else {
                     // Als de 'view' parameter niet 'display' is, laat de elementen zien
                     const elementsToShow = document.querySelectorAll('.hide-if-needed');
@@ -92,13 +86,6 @@
                 geselecteerdeTimer = index;
                 document.getElementById(`timer-container-${index}`).classList.add("selected");
                 document.getElementById("timerSelect").value = index;
-
-                // Bewaar de geselecteerde timer in localStorage voor gebruik bij view=display
-                localStorage.setItem('selectedTimer', index);
-
-                // Update Firebase met de nieuwe geselecteerde timer
-                const selectedTimerRef = firebase.database().ref('selectedTimer');
-                selectedTimerRef.set(index);
             }
 
             function startTimer() {
@@ -189,13 +176,18 @@
                 const timersRef = firebase.database().ref('timers');
                 timersRef.on('value', (snapshot) => {
                     const data = snapshot.val();
-                    if (data) {
+
+                    // Checken of data beschikbaar is
+                    if (data && data.team1 !== undefined && data.team2 !== undefined && data.team3 !== undefined && data.team4 !== undefined) {
                         timers = [data.team1, data.team2, data.team3, data.team4];
                         updateWeergave();
+                    } else {
+                        console.warn('Geen geldige data beschikbaar in Firebase');
                     }
                 });
             }
 
+            // Functie om de database te initialiseren met standaardwaarden als deze leeg is
             function checkAndInitializeDatabase() {
                 const timersRef = firebase.database().ref('timers');
                 timersRef.once('value', (snapshot) => {
@@ -210,8 +202,7 @@
                 });
             }
 
-            checkAndInitializeDatabase();
-            syncTimers();
+            checkAndInitializeDatabase(); // Zorg ervoor dat de database wordt geïnitialiseerd als deze leeg is
 
             // Event listeners voor timer en knoppen
             document.querySelectorAll(".timer").forEach((el, index) => {
@@ -234,6 +225,7 @@
 
             selecteerTimer(0);
             updateWeergave();
+            syncTimers(); // Start het synchroniseren van de timers
         });
     </script>
     <style>
