--- a/index.html
+++ b/index.html
@@ -42,11 +42,40 @@
                     elementsToHide.forEach(el => {
                         el.style.display = 'none';
                     });
+
+                    // Zet de knoppen en teamnamen op 'disabled' zodat ze niet interactief zijn
+                    document.querySelectorAll(".timer").forEach((el) => {
+                        el.style.pointerEvents = "none"; // Timers niet selecteerbaar
+                    });
+
+                    document.querySelectorAll(".team-name").forEach((el) => {
+                        el.style.pointerEvents = "none"; // Teamnamen niet wijzigbaar
+                    });
+
+                    const teamInputElements = document.querySelectorAll(".team-input");
+                    teamInputElements.forEach((el) => {
+                        el.setAttribute("disabled", "true"); // Zet inputvelden voor teamnamen uit
+                    });
+
                 } else {
                     // Als de 'view' parameter niet 'display' is, laat de elementen zien
                     const elementsToShow = document.querySelectorAll('.hide-if-needed');
                     elementsToShow.forEach(el => {
                         el.style.display = 'block';
+                    });
+
+                    // Zet alles weer actief in de andere modus
+                    document.querySelectorAll(".timer").forEach((el) => {
+                        el.style.pointerEvents = "auto";
+                    });
+
+                    document.querySelectorAll(".team-name").forEach((el) => {
+                        el.style.pointerEvents = "auto";
+                    });
+
+                    const teamInputElements = document.querySelectorAll(".team-input");
+                    teamInputElements.forEach((el) => {
+                        el.removeAttribute("disabled"); // Zet de teamnaam inputvelden weer aan
                     });
                 }
             }
@@ -386,7 +415,6 @@
         </div>
     </div>
 
-    <!-- Control Buttons -->
     <div class="controls">
         <div class="row">
             <button id="startBtn" class="hide-if-needed">Start</button>
