--- a/index.html
+++ b/index.html
@@ -341,10 +341,16 @@
         .team-input {
             font-size: 30px;
             font-weight: bold;
-            width: 80%;
+            width: 100%;
             text-align: center;
             border: none;
             outline: none;
+            box-sizing: border-box;
+        }
+        @media (max-width: 768px) {
+            .team-input {
+                font-size: 24px;
+            }
         }
         .controls {
             display: flex;
