--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@
             color: red;
             background-color: white;
             border-radius: 20px;
+            text-align: center;
         }
 
         /* Media query voor desktop: vergroot de timertekst */
