--- a/index.html
+++ b/index.html
@@ -330,7 +330,6 @@
             color: red;
             background-color: white;
             border-radius: 20px;
-            text-align: center;
         }
 
         /* Media query voor desktop: vergroot de timertekst */
@@ -346,36 +345,16 @@
             font-weight: bold;
             color: black;
             cursor: pointer;
-            margin-bottom: 10px; /* Verminder de marge om het meer in het midden te krijgen */
-            width: 100%;
-            text-align: center; /* Zorg ervoor dat de naam in het midden komt te staan */
+            margin-bottom: 20px;
         }
 
         .team-input {
             font-size: 30px;
             font-weight: bold;
-            width: 100%; /* Volledige breedte */
+            width: 80%;
             text-align: center;
             border: none;
             outline: none;
-            box-sizing: border-box;
-        }
-
-        /* Media query voor mobiele schermen */
-        @media (max-width: 768px) {
-            .timer {
-                width: 230px;
-                height: 230px;
-                font-size: 50px; /* Mobiele versie font-grootte */
-            }
-            .team-name {
-                font-size: 24px;  /* Zorg ervoor dat de teamnaam goed leesbaar is op mobiel */
-                margin-bottom: 10px; /* Pas de marge aan voor mobiele weergave */
-            }
-            .team-input {
-                font-size: 24px;  /* Zorgt ervoor dat de naam groot genoeg is voor mobiel */
-                width: 90%;  /* Zorg ervoor dat het invoerveld kleiner is dan de timerbox */
-            }
         }
 
         .controls {
@@ -412,8 +391,13 @@
             .timer-container {
                 flex-direction: row;
             }
+            .timer {
+                width: 230px;
+                height: 230px;
+                font-size: 50px; /* Mobiele versie font-grootte */
+            }
             .team-name {
-                font-size: 18px;  /* Pas de teamnaam op mobiel aan */
+                font-size: 18px;
             }
             .controls {
                 width: 90%;
